force-app/main/default/objects/Employee_Performance_Objective__c/Employee_Performance_Objective__c.object-meta.xml
<CustomObject>
    <description>Child object of the Employee Performance Management object</description>
    <label>Employee Performance Objective</label>
    <nameField>
        <displayFormat>EPO-{00000}</displayFormat>
        <label>Employe Performance Objective #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Performance Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>