force-app/main/default/objects/Employee_Performance_Objective__c/fields/April_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>April_Self_Assessment__c</fullName>
    <label>April Self Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>