force-app/main/default/objects/Employee_Performance_Objective__c/fields/August_Review__c.field-meta.xml
<CustomField>
    <fullName>August_Review__c</fullName>
    <label>August Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>