force-app/main/default/objects/Employee_Performance_Objective__c/fields/December_Review__c.field-meta.xml
<CustomField>
    <fullName>December_Review__c</fullName>
    <label>December Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>