force-app/main/default/objects/Employee_Performance_Objective__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>Employee_Performance_Management__r.Employee_Name__r.FirstName + &quot; &quot; +  Employee_Performance_Management__r.Employee_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>