force-app/main/default/objects/Employee_Performance_Objective__c/fields/Employee_Performance_Management__c.field-meta.xml
<CustomField>
    <fullName>Employee_Performance_Management__c</fullName>
    <label>Employee Performance Management</label>
    <referenceTo>Employee_Performance_Management__c</referenceTo>
    <relationshipLabel>Employee Performance Objective</relationshipLabel>
    <relationshipName>Employee_Performance_Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>