force-app/main/default/objects/Employee_Performance_Objective__c/fields/February_Review__c.field-meta.xml
<CustomField>
    <fullName>February_Review__c</fullName>
    <label>February Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>