force-app/main/default/objects/Employee_Performance_Objective__c/fields/February_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>February_Self_Assessment__c</fullName>
    <label>February Self Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>