force-app/main/default/objects/Employee_Performance_Objective__c/fields/July_Review__c.field-meta.xml
<CustomField>
    <fullName>July_Review__c</fullName>
    <label>July Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>