force-app/main/default/objects/Employee_Performance_Objective__c/fields/July_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>July_Self_Assessment__c</fullName>
    <label>July Self Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>