force-app/main/default/objects/Employee_Performance_Objective__c/fields/June_Rating__c.field-meta.xml
<CustomField>
    <fullName>June_Rating__c</fullName>
    <label>June Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Unsatisfactory</fullName>
            </value>
            <value>
                <fullName>2 - Below Expectations</fullName>
            </value>
            <value>
                <fullName>3 - Meets Expectations</fullName>
            </value>
            <value>
                <fullName>4 - Overachieved</fullName>
            </value>
            <value>
                <fullName>5 - Exceptional</fullName>
            </value>
            <value>
                <fullName>1 - Does Not Demonstrate</fullName>
            </value>
            <value>
                <fullName>2 - Demonstrates</fullName>
            </value>
            <value>
                <fullName>3 - Role Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>