force-app/main/default/objects/Employee_Performance_Objective__c/fields/June_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>June_Self_Assessment__c</fullName>
    <label>June Self Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>