force-app/main/default/objects/Employee_Performance_Objective__c/fields/March_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>March_Self_Assessment__c</fullName>
    <label>March Self Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>