force-app/main/default/objects/Employee_Performance_Objective__c/fields/May_Review__c.field-meta.xml
<CustomField>
    <fullName>May_Review__c</fullName>
    <label>May Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>