force-app/main/default/objects/Employee_Performance_Objective__c/fields/November_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>November_Self_Assessment__c</fullName>
    <label>November Self Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>