force-app/main/default/objects/Employee_Performance_Objective__c/fields/October_Review__c.field-meta.xml
<CustomField>
    <fullName>October_Review__c</fullName>
    <label>October Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>