force-app/main/default/objects/Employee_Performance_Objective__c/fields/October_Review_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>October_Review_by_Manager__c</fullName>
    <label>October Review by Manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>