force-app/main/default/objects/Employee_Performance_Objective__c/fields/October_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>October_Self_Assessment__c</fullName>
    <label>October Self Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>