force-app/main/default/objects/Employee_Performance_Objective__c/fields/Purpose_Passion_and_Performance__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Passion_and_Performance__c</fullName>
    <label>Purpose, Passion and Performance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>