force-app/main/default/objects/Employee_Performance_Objective__c/fields/September_Review__c.field-meta.xml
<CustomField>
    <fullName>September_Review__c</fullName>
    <label>September Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>