force-app/main/default/objects/Employee_Performance_Objective__c/fields/September_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>September_Self_Assessment__c</fullName>
    <label>September Self Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>