force-app/main/default/objects/Employee_Performance_Objective__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>SMART Development Objective</fullName>
            </value>
            <value>
                <fullName>SMART Work Objective</fullName>
            </value>
            <value>
                <fullName>Value Assessment - Our People Are Our Strength</fullName>
            </value>
            <value>
                <fullName>Value Assessment - Own Outcomes</fullName>
            </value>
            <value>
                <fullName>Value Assessment - Purpose, Passion &amp; Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>