force-app/main/default/objects/Employee_Performance_Objective__c/fields/Year_End_Comment_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>Year_End_Comment_by_Manager__c</fullName>
    <label>Year End Comment by Manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>