force-app/main/default/objects/Employee_Performance_Objective__c/fields/Year_End_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Year_End_Self_Assessment__c</fullName>
    <label>Year End Self Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>