force-app/main/default/objects/Employee_Performance_Objective__c/recordTypes/SMART_Developement_Objective.recordType-meta.xml
<RecordType>
    <fullName>SMART_Developement_Objective</fullName>
    <active>true</active>
    <description>Capitalize on strengths and identify development needs aligned with short- and long-term objectives inclusive of professional aspirations.</description>
    <label>SMART Developement Objective</label>
</RecordType>