force-app/main/default/objects/Employee_Performance_Objective__c/recordTypes/SMART_Work_Objective.recordType-meta.xml
<RecordType>
    <fullName>SMART_Work_Objective</fullName>
    <active>true</active>
    <description>Performance based expectation based on the business needs, job requirements, and business priorities.</description>
    <label>SMART Work Objective</label>
</RecordType>