force-app/main/default/objects/Employee_Performance_Objective__c/recordTypes/Value_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Value_Assessment</fullName>
    <active>false</active>
    <description>Need Definition</description>
    <label>Value Assessment</label>
</RecordType>